--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sonarRunner {
+        sonarProperties {
+            property "sonar.host.url", "http://localhost/sonar"
+            property "sonar.jdbc.url", "jdbc:mysql://localhost:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance"
+            property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
+            property "sonar.jdbc.username", "sonar"
+            property "sonar.jdbc.password", "password"
+            property "sonar.login", "admin"
+            property "sonar.password", "password"
+
+            property "sonar.sourceEncoding", "UTF-8"
+            property "sonar.projectKey", "davidlab:sonartest"
+            property "sonar.projectName", "SonarTest"
+            property "sonar.projectVersion", "0.1"
+
+            properties["sonar.sources"] += "src/main"
+            property "sonar.java.binaries", "build/intermediates/classes/debug"
+            property "sonar.android.lint.report", "build/outputs/lint-results.xml"
+        }
+    }
+
 }
 
 dependencies {
