--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,33 +16,39 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+   }
+
+    dependencies {
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+        testCompile 'junit:junit:4.12'
+        compile 'com.android.support:appcompat-v7:23.1.0'
+        compile 'com.android.support:design:23.1.0'
     }
-    sonarRunner {
-        sonarProperties {
-            property "sonar.host.url", "http://localhost/sonar"
-            property "sonar.jdbc.url", "jdbc:mysql://localhost:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance"
-            property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
-            property "sonar.jdbc.username", "sonar"
-            property "sonar.jdbc.password", "password"
-            property "sonar.login", "admin"
-            property "sonar.password", "password"
+// Add Jacoco
+    apply plugin: 'jacoco'
 
-            property "sonar.sourceEncoding", "UTF-8"
-            property "sonar.projectKey", "davidlab:sonartest"
-            property "sonar.projectName", "SonarTest"
-            property "sonar.projectVersion", "0.1"
-
-            properties["sonar.sources"] += "src/main"
-            property "sonar.java.binaries", "build/intermediates/classes/debug"
-            property "sonar.android.lint.report", "build/outputs/lint-results.xml"
+    debug {
+        testCoverageEnabled = true
+    }
+    /*task jacocoTestReport(type: jacocoTestReport, dependsOn: "testDebug") {
+        group = "Reporting"
+        description = "Generate Jacoco coverage after running tests."
+        reports {
+            xml.enabled = true //coveralls plugin depends on xml format report
+            html.enabled = true
         }
-    }
+        classDirectories = fileTree(
+                dir: 'build/intermediates/classes/debug',
+                excludes: ['com/toast/android/mobill/core/BuildConfig.class'
+                ])
+        sourceDirectories = files(coverageSourceDirs)
+        executionData = files('build/jacoco/testDebug.exec')
 
+        afterEvaualte {
+            testDebug.reports.junitxml.enabled = false
+        }
+    } // end of ADD jacoco
+*/
 }
 
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.android.support:design:23.1.0'
-}
